--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@
   --brand-color: #ef5f4c;
   --background-color: #f5f5f5;
   --skeleton-color: #d9d9d9;
+  --surface-color: #f5f5f5;
   --shape-transparency: #ffffff8f;
   --text-color-primary: #313131;
   --text-color-secondary: #6c6c6c;
@@ -22,4 +23,23 @@ body {
   color: var(--text-color-secondary);
   background-color: var(--background-color);
   font: var(--text);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: var(--brand-color);
+  text-decoration: underline;
+}
+.container {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+}
+
+.bg-surface-color {
+  background-color: var(--surface-color);
 }
